methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:18: error: identifier expected but 'var' found.
def isFacingTrail(var color: String):Boolean = {
                  ^SlugSnail:34: error: ':' expected but '}' found.
}
^